Changelog
=========

1.3.7 (2013-05-06)
------------------

- missed collections fix [vangheem]


1.3.6 (2013-05-06)
------------------

- fix new style collections querying [ableeb]

- small fix so it works on Plone 4.3  [espenmn]


1.3.5 (2013-03-05)
------------------

- fix upgrade step
  [vangheem]


1.3.4 (2013-02-25)
------------------

- fix borked previous release
  [vangheem]


1.3.3 (2013-02-25)
------------------

- be able to upgrade to use with new collection type
  [vangheem]

- fix install if new collection type is not present
  [vangheem]


1.3.2 (2013-02-06)
------------------

- look at parent object if context is not anonatable.
  this will fix plone.app.event sub events breaking.
  [vangheem] 

1.3.1 (2013-02-05)
------------------

- fix import if plone.app.collection is not installed
  [vangheem]

1.3.0 (2013-02-02)
------------------

- support new style collections with sliderview
  [ableeb]

1.2.0 (2013-01-16)
------------------

- be consistent with Anysurfer
  XXX HTML markup has changed slightly so please
  test any style customizations when upgrading.
  [smoussiaux]

1.1.1 (2012-10-20)
------------------

- add zcml include to fix startup issues in some
  Plone 4.2 setups.
  [zopyx]

1.1 (2012-09-19)
----------------

- Add global configuration
  [zombified]


1.0 (2012-04-25)
----------------

- allow original scale for slider view
  [vangheem]

- add pause on hover option
  [espen]]


0.8.1b1 (2012-02-16)
--------------------

- Add randomize feature
  [vangheem]

- allow drag n drop reordering of slides
  [vangheem]


0.8.0b2 (2012-02-15)
--------------------

- Ensure that users with the Site Administrator role can edit slider settings
  under Plone 4.1+.
  [davidjb]
- Fix failing test under Plone 3.
  [davidjb]
- Remove bottom border for navigation bullets under <= IE6.
  [davidjb]
- Allow active navigation bullets to change on slide transition under new
  *Navigation Bullets* layout.
  [davidjb]
- Added a new layout with bullets.