@@ -1,6 +1,14 @@
 Changelog
 =========
 
+
+Next version (1.3.8)
+---------------------
+
+- added setting to hide title and description [espenmn]
+- added setting (Bullets Only) [espenmn]
+
+
 1.3.7 (2013-05-06)
 ------------------
 
